Fix buttons on safari

--- a/front/src/components/App/app.scss
+++ b/front/src/components/App/app.scss
@@ -422,6 +422,7 @@ h1 {
 }
 
 input[type=text],
+input[type=submit],
 button[type=submit], input[type=button] {
 -webkit-appearance: none;
   -moz-appearance: none;
